added jetty/solr requires properties

--- a/archetypes/standalone-jetty/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone-jetty/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -1,1 +1,8 @@
-tomcat.connector.port=8080
+jetty.connector.port=8080
+solr.contextPath=/
+
+solr.abortOnConfigurationError=true
+solr.data.dir.master=/tmp/master/indexes/
+solr.data.dir.slave=/tmp/slave/indexes/
+solr.slave.masterHost=localhost
+solr.clustering.enabled=true
