added the standalone-jetty in the archetypes module list

--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -50,6 +50,7 @@
     <modules>
         <module>standalone-tomcat</module>
         <module>multicore-tomcat</module>
+        <module>standalone-jetty</module>
     </modules>
 
 </project>
